fix(): hide overflow

--- a/src/components/app-root/app-root.css
+++ b/src/components/app-root/app-root.css
@@ -3,5 +3,7 @@ main {
   background-color: #f5f7fb;
   min-height: calc(100vh - 80px);
   height: 100%;
+  width: 100vw;
+  overflow: hidden;
   z-index: 0;
 }
